vault: CRUD functionality for artivacts added.